--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,14 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  heroku: circleci/heroku@1.2.6
+
+workflows:
+  test-env-vars:
+    jobs:
+      - build:
+          context: my_context_name
 
 jobs:
   build:
